@@ -16,6 +16,19 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|base
+operator|.
+name|Charsets
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -142,6 +155,21 @@ operator|.
 name|cloud
 operator|.
 name|ZkConfigManager
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|ZkStateReader
 import|;
 end_import
 begin_import
@@ -609,6 +637,45 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|jettyConfig
+operator|.
+name|sslConfig
+operator|!=
+literal|null
+operator|&&
+name|jettyConfig
+operator|.
+name|sslConfig
+operator|.
+name|isSSLMode
+argument_list|()
+condition|)
+block|{
+name|zkClient
+operator|.
+name|makePath
+argument_list|(
+literal|"/solr"
+operator|+
+name|ZkStateReader
+operator|.
+name|CLUSTER_PROPS
+argument_list|,
+literal|"{'urlScheme':'https'}"
+operator|.
+name|getBytes
+argument_list|(
+name|Charsets
+operator|.
+name|UTF_8
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|// tell solr to look in zookeeper for solr.xml
 name|System
